<resources>
    <string name="app_name">MyItunesApp</string>
    <string name="search">Search something...</string>
    <string name="movies">Movie</string>
    <string name="music">Music</string>
    <string name="apps">App</string>
    <string name="books">Book</string>
    <string name="free">Free</string>
    <string name="releaseDate">Release Date </string>
    <string name="dolar">$</string>
    <string name="noDesc">No description</string>
    <string name="author">Author</string>
    <string name="country">Country</string>
    <string name="collection">Collection</string>
    <string name="internet">Check internet connection</string>
    <string name="apple">apple</string>
    <string name="exitApp">Exit App</string>
    <string name="exitQuestiom">Do you want to exit the app ?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
</resources>