<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="homeFragment"
            type="com.ozaltun.myitunesapp.view.HomeFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.HomeFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="20dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:endIconMode="clear_text"
            android:hint="@string/search"
            app:hintTextColor="@color/black"
            android:textColorHint="@color/black"
            android:backgroundTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconDrawable="@drawable/icon_search">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textFieldInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/apple"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:singleSelection="true"
            app:selectionRequired="true"
            app:checkedButton="@id/MoviesButton"
            app:layout_constraintTop_toBottomOf="@id/textField"
            app:layout_constraintStart_toStartOf="@id/textField"
            app:layout_constraintEnd_toEndOf="@id/textField"
            android:layout_marginTop="15dp">


            <Button
                android:id="@+id/MoviesButton"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movies"
                android:textColor="@color/black"
                android:onClick="@{()->homeFragment.moviesOnClick()}"
                android:textSize="12sp"
                app:cornerRadius="10dp" />

            <Button
                android:id="@+id/MusicsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/music"
                android:textSize="12sp"
                android:textColor="#1E1E1E"
                android:onClick="@{()->homeFragment.musicOnClick()}"
                style="?attr/materialButtonOutlinedStyle"
                />
            <Button
                android:id="@+id/AppsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apps"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:onClick="@{()->homeFragment.appsOnClick()}"
                style="?attr/materialButtonOutlinedStyle"
                />
            <Button
                android:id="@+id/BooksButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/books"
                android:textSize="12sp"
                android:textColor="@color/black"
                app:cornerRadius="10dp"
                android:onClick="@{()->homeFragment.booksOnClick()}"
                style="?attr/materialButtonOutlinedStyle"

                />
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="0dp"
            android:orientation="vertical"
            android:layout_marginVertical="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toggleButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>